--- a/fronted-mejor/metodo_de_pago.html
+++ b/fronted-mejor/metodo_de_pago.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Método de Pago</title>
-    <link rel="stylesheet" href="style/style_metodo_de_pago.css"> 
+    <link rel="stylesheet" href="../fronted-mejor/style/style_metodo_de_pago.css"> 
 </head>
 <body>
     <div class="container">
