--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inicio - Restaurante Mestiza</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Iconos para el botón -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style/style.css" data-global="true" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
+
 <body class="pagina-negra">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
@@ -16,7 +18,8 @@
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
         <img src="./imagenes/FOTO_2.png" alt="Mestiza" class="brand-logo" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Menu">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Menu">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
@@ -35,18 +38,18 @@
   </nav>
 
   <main>
-    <!-- HERO centrado en área negra (solo FOTO_2.png) -->
     <section class="hero">
       <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="hero-bg bg-black"></div>
             <div class="hero-overlay"></div>
+
             <div class="hero-center">
-              <img src="./imagenes/FOTO.png" class="hero-photo" alt="Mestiza" />
+              <a href="sobre_nosotros.html"> <img src="./imagenes/FOTO.png" class="hero-photo" alt="Mestiza" /></a>
             </div>
             <div class="hero-caption text-center">
-              <p class="horarios lead mt-2 mb-3">
+              <p class="horarios lead mt-5 mb-3">
                 ABIERTO<br />
                 Lunes a Viernes: 17:00 a 19:00<br />
                 Sábados y Domingos: 13:00 a 23:00
@@ -57,97 +60,94 @@
         </div>
       </div>
     </section>
-
-    <section class="contenido-blanco">
+    <section class="contenido-blanco" data-aos="fade-up">
       <div class="container py-5">
-        <h2 class="text-center mb-4">Nuestras Especialidades</h2>
-        <div class="row g-4">
-          <!-- Carrusel 1 -->
-          <div class="col-12 col-md-6">
-            <div id="carouselExample1" class="carousel carousel-fade carousel-hero slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExample1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Foto 1"></button>
-                <button type="button" data-bs-target="#carouselExample1" data-bs-slide-to="1" aria-label="Foto 2"></button>
-              </div>
-
-              <div class="carousel-inner rounded-4 overflow-hidden shadow-lg">
-                <div class="carousel-item active" data-bs-interval="5000">
-                  <img src="./imagenes/1.png" class="d-block w-100" alt="Foto 1" loading="lazy" />
-                  <div class="carousel-caption text-start">
-                    <h5 class="mb-1">Sabores de Autor</h5>
-                    <p class="mb-0 small opacity-75">Ingredientes frescos y salsas caseras</p>
-                  </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                  <img src="./imagenes/2.png" class="d-block w-100" alt="Foto 2" loading="lazy" />
-                  <div class="carousel-caption text-start">
-                    <h5 class="mb-1">Técnica y Pasión</h5>
-                    <p class="mb-0 small opacity-75">Smash burgers y clásicos de feria</p>
-                  </div>
-                </div>
-              </div>
-
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-              </button>
-            </div>
+        <div class="row mt-5">
+          <div class="col-12" data-aos="fade-in">
+            <hr class="border-secondary opacity-50">
           </div>
-
-          <!-- Carrusel 2 -->
-          <div class="col-12 col-md-6">
-            <div id="carouselExample2" class="carousel carousel-fade carousel-hero slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExample2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Foto 3"></button>
-                <button type="button" data-bs-target="#carouselExample2" data-bs-slide-to="1" aria-label="Foto 4"></button>
-              </div>
-
-              <div class="carousel-inner rounded-4 overflow-hidden shadow-lg">
-                <div class="carousel-item active" data-bs-interval="5000">
-                  <img src="./imagenes/3.png" class="d-block w-100" alt="Foto 3" loading="lazy" />
-                  <div class="carousel-caption text-start">
-                    <h5 class="mb-1">Texturas que Enamoran</h5>
-                    <p class="mb-0 small opacity-75">Crujiente por fuera, jugoso por dentro</p>
+          <h2 class="text-center mb-4" data-aos="fade-up" data-aos-delay="200">Nuestra Especialidad</h2>
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-8">
+              <div id="carouselExampleMestiza" class="carousel carousel-fade carousel-hero slide" data-aos="fade-up" data-aos-delay="400">
+                <div class="carousel-inner rounded-4 overflow-hidden shadow-lg">
+                  <div class="carousel-item active"> <img src="../uploads/products/mestiza.png" class="d-block w-100"
+                      alt="Hamburguesa Mestiza" loading="lazy" />
+                    <div class="carousel-caption text-start">
+                      <h5 class="mb-1">Hamburguesa Mestiza</h5>
+                    </div>
                   </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                  <img src="./imagenes/4.png" class="d-block w-100" alt="Foto 4" loading="lazy" />
-                  <div class="carousel-caption text-start">
-                    <h5 class="mb-1">Para Compartir</h5>
-                    <p class="mb-0 small opacity-75">Tacos, burgers y mucho más</p>
-                  </div>
+
                 </div>
               </div>
-
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-              </button>
+              <div class="text-center mt-4 mb-5" data-aos="fade-up" data-aos-delay="500">
+                <a href="menu.html" class="btn btn-cta btn-lg">
+                  <i class="bi bi-cart-plus me-2"></i> Añadir al carrito
+                </a>
+              </div>
             </div>
           </div>
         </div>
-
-        <!-- Botón CTA al menú (eliminado de aquí) -->
-        <!--
-        <div class="text-center mt-5">
-          <a href="menu.html" class="btn btn-cta btn-lg">
-            <i class="bi bi-egg-fried me-2"></i> Ver menú y hacer pedido
-          </a>
-        </div>
-        -->
       </div>
+      <div class="container pb-5" data-aos="fade-in" data-aos-delay="600">
+        <hr class="border-secondary opacity-50">
+      </div>
+    </section>
+
+    <section class="contenido-blanco pt-0 pb-5">
+      <div class="container">
+    </section>
+
+    <section class="contenido-blanco pt-0 pb-5" data-aos="fade-up" data-aos-delay="200">
+      <div class="container">
+        <h2 class="text-center mb-4" data-aos="fade-up">Las Mejores Opciones</h2>
+        <div class="row g-4">
+
+          <div class="col-12 col-md-6">
+            <div id="carouselExampleDani" class="carousel carousel-fade carousel-hero slide" data-aos="fade-right" data-aos-delay="200">
+              <div class="carousel-inner rounded-4 overflow-hidden shadow-lg">
+                <div class="carousel-item active"> <img src="../uploads/products/dani.png" class="d-block w-100"
+                    alt="Hamburguesa Dani" loading="lazy" />
+                  <div class="carousel-caption text-start">
+                    <h5 class="mb-1">Hamburguesa Dani</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="300">
+              <a href="menu.html" class="btn btn-cta">
+                <i class="bi bi-cart-plus me-2"></i> Añadir al carrito
+              </a>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <div id="carouselExampleJavito" class="carousel carousel-fade carousel-hero slide" data-aos="fade-left" data-aos-delay="400">
+              <div class="carousel-inner rounded-4 overflow-hidden shadow-lg">
+                <div class="carousel-item active"> <img src="../uploads/products/javito.png" class="d-block w-100"
+                    alt="Hamburguesa Javito" loading="lazy" />
+                  <div class="carousel-caption text-start">
+                    <h5 class="mb-1">Hamburguesa Javito</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="500">
+              <a href="menu.html" class="btn btn-cta">
+                <i class="bi bi-cart-plus me-2"></i> Añadir al carrito
+              </a>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-12" data-aos="fade-in" data-aos-delay="600">
+              <hr class="border-secondary opacity-50">
+            </div>
+          </div>
+        </div>
     </section>
   </main>
 
-  <footer class="bg-light py-4 mt-5">
+  <footer class="bg-light py-4">
     <div class="container text-center">
       <p class="mb-1">Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
       <p class="mb-1">Tel: +598 98 107 643</p>
@@ -156,13 +156,21 @@
         <a href="https://www.instagram.com/mestiza_street_food/" target="_blank" rel="noopener" class="me-2">
           <img src="./imagenes/instagram.png" alt="Instagram" style="height:28px" />
         </a>
-        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank" rel="noopener">
+        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank"
+          rel="noopener">
           <img src="./imagenes/facebook.png" alt="Facebook" style="height:28px" />
         </a>
       </div>
     </div>
   </footer>
-
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000, // Duración de la animación en milisegundos
+      once: true      // Solo animar una vez por si el usuario sube y baja
+    });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
+
 </html>
