--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style/style.css" />
 </head>
-<body class="pagina-blanca menu-page">
+<body class="pagina-blanca">
 
   <!-- Navbar igual al resto (full-width) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
@@ -186,5 +186,7 @@
        });
      });
   </script>
-</body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
