--- a/admin/frontend/productos.html
+++ b/admin/frontend/productos.html
@@ -95,10 +95,6 @@
                 <input id="product-precio" name="precio" type="number" step="0.01" min="0" class="form-control" required>
               </label>
 
-              <label>Tamaños (JSON opcional)
-                <input id="product-tamanos" name="tamanos_precios" class="form-control" placeholder='{"Simple":300,"Doble":400,"Triple":500}'>
-              </label>
-
               <label>Imagen
                 <input id="product-imagen" name="imagen" type="file" accept="image/*" class="form-control">
                 <img id="product-preview" alt="Vista previa" style="display:none;max-height:80px;margin-top:6px;border-radius:6px;">
@@ -114,7 +110,7 @@
 
             <table class="table" id="tb">
               <thead>
-                <tr><th>ID</th><th>Nombre</th><th>Categoría</th><th>Precio</th><th>Tamaños</th><th>Acciones</th></tr>
+                <tr><th>ID</th><th>Nombre</th><th>Categoría</th><th>Precio</th><th>Acciones</th></tr>
               </thead>
               <tbody>
               ${items.map(p => `
@@ -132,7 +128,6 @@
                   <td><input class="prod-nombre" value="${(p.nombre ?? '').replaceAll('"','&quot;')}"></td>
                   <td><input class="prod-categoria" value="${(p.categoria ?? '').replaceAll('"','&quot;')}"></td>
                   <td><input class="prod-precio" type="number" step="0.01" value="${Number(p.precio ?? 0)}"></td>
-                  <td><input class="prod-tamanos" value='${p.tamanos_precios ? (typeof p.tamanos_precios === "string" ? p.tamanos_precios.replaceAll("'","&#39;") : JSON.stringify(p.tamanos_precios)) : ""}'></td>
                   <td class="flex gap">
                     <button data-act="edit" class="btn">Editar</button>
                     <button data-act="save" class="btn">Guardar</button>
@@ -190,7 +185,6 @@
           document.getElementById('product-nombre').value  = tr.dataset.nombre || tr.querySelector('.prod-nombre')?.value || '';
           document.getElementById('product-categoria').value = tr.dataset.categoria || tr.querySelector('.prod-categoria')?.value || '';
           document.getElementById('product-precio').value  = tr.dataset.precio || tr.querySelector('.prod-precio')?.value || 0;
-          document.getElementById('product-tamanos').value = tr.dataset.tamanos || tr.querySelector('.prod-tamanos')?.value || '';
           if (tr.dataset.imagen) { preview.src = tr.dataset.imagen; preview.style.display = 'inline-block'; } else { preview.src=''; preview.style.display='none'; }
           window.scrollTo({ top: 0, behavior: 'smooth' });
           return;
@@ -204,7 +198,6 @@
           fd.set('nombre',     tr.querySelector('.prod-nombre')?.value?.trim() || '');
           fd.set('categoria',  tr.querySelector('.prod-categoria')?.value?.trim() || '');
           fd.set('precio',     tr.querySelector('.prod-precio')?.value || 0);
-          fd.set('tamanos_precios', tr.querySelector('.prod-tamanos')?.value || '');
 
           const res = await fetch(ENDPOINT, { method: 'POST', body: fd });
           const j = await res.json().catch(()=>({}));
